Port to Java 16 and Change docker for serve